--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ scipy>=1.7.0
 pandas>=1.3.0
 scikit-learn>=1.0.0
 
+# Image Processing (for MIMIC-CXR)
+Pillow>=8.0.0
+
 # Visualization (optional - for plotting/analysis)
 matplotlib>=3.3.0
 seaborn>=0.11.0
